--- a/style.css
+++ b/style.css
@@ -113,6 +113,9 @@ body {
   font-size: 11px; /* Reduced size */
   text-transform: uppercase;
   font-family: "Roboto Condensed", sans-serif;
+  background-color: black;
+  color: #fffee9;
+
 }
 
 .date-center {
