--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 .header-left,
 .header-right {
-  width: 25%;
+  width: 10%;
   font-size: 9px; /* Slightly smaller font */
   display: flex;
   flex-direction: column;
@@ -84,8 +84,8 @@ body {
 }
 
 .main-title {
-  font-family: "MedievalSharp", serif;
-  font-size: 38px; /* Reduced size */
+  font-family: 'UnifrakturCook', cursive;
+  font-size: 72px; /* Reduced size */
   text-transform: uppercase;
   margin: 0;
   line-height: 1;
@@ -95,12 +95,10 @@ body {
 
 .sub-title {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 18px; /* Reduced size */
-  text-transform: uppercase;
+  font-size: 42px; /* Reduced size */
   margin: 0;
-  letter-spacing: 4px;
+  letter-spacing: 2px;
   padding-bottom: 5px;
-  border-bottom: 1px solid #1a1a1a;
 }
 
 .header-row {
@@ -108,7 +106,7 @@ body {
   justify-content: space-between;
   border-top: 2px solid #1a1a1a;
   border-bottom: 2px solid #1a1a1a;
-  padding: 5px 0;
+  padding: 5px;
   margin-bottom: 10px;
   font-size: 11px; /* Reduced size */
   text-transform: uppercase;
@@ -125,9 +123,10 @@ body {
 /* Image and Top Right Content Grid */
 .content-grid {
   display: grid;
-  grid-template-columns: 2fr 1fr; /* Image takes 2/3, text takes 1/3 */
+  grid-template-columns: 4fr 1fr; /* Image takes 2/3, text takes 1/3 */
   gap: 12px; /* Reduced gap */
   margin-bottom: 15px;
+  height: 400px;
 }
 
 .image-column-wrapper {
@@ -140,6 +139,7 @@ body {
   aspect-ratio: 16 / 10;
   overflow: hidden;
   border: 1px solid #1a1a1a;
+  height: 400px;
 }
 
 #uploadImage {
@@ -156,7 +156,6 @@ body {
 }
 
 .article-right-top {
-  border-left: 1px solid #1a1a1a;
   padding-left: 12px; /* Reduced padding */
   font-size: 11px; /* Reduced size */
   line-height: 1.4;
@@ -187,9 +186,8 @@ body {
 /* Main Columns */
 .columns {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 2fr;
   gap: 12px; /* Reduced gap */
-  border-top: 1px solid #1a1a1a;
   padding-top: 12px;
 }
 
@@ -200,7 +198,6 @@ body {
 }
 
 .column:not(:last-child) {
-  border-right: 1px solid #1a1a1a;
   padding-right: 12px; /* Reduced padding */
 }
 
@@ -210,7 +207,6 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   margin: 8px 0 4px 0;
-  border-bottom: 1px solid #1a1a1a;
   padding-bottom: 1px;
 }
 
@@ -264,6 +260,30 @@ p strong {
   padding: 1px 3px;
   line-height: 1;
 }
+#camera-img{
+  object-fit: cover;
+  height: 100%;
+  width: 157%;
+}
+#qnd-img{
+  height: 100px;
+  width: 180%;
+}
+.first-line{
+  margin: 0px;
+}
+.second-line{
+  background-color: black;
+  height: 4px;
+  margin-top: 1px;
+}
+#insta-qr{
+  height: 100px;
+}
+.climate-div{
+  border: 2px solid black;
+  padding: 15px 10px;
+}
 
 /* Print Styles */
 @media print {
@@ -287,3 +307,6 @@ p strong {
   }
 
 }
+
+
+
