--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
   grid-template-columns: 4fr 1fr; /* Image takes 2/3, text takes 1/3 */
   gap: 12px; /* Reduced gap */
   margin-bottom: 15px;
-  height: 400px;
+  height: auto;
 }
 
 .image-column-wrapper {
@@ -139,16 +139,19 @@ body {
   aspect-ratio: 16 / 10;
   overflow: hidden;
   border: 1px solid #1a1a1a;
-  height: 400px;
+  height: 390px;
+  cursor: pointer;
 }
 
 #uploadImage {
+  position: absolute;     /* IMPORTANT for moving */
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
-  cursor: pointer;
-  filter: grayscale(100%);
+  transform: translate(0,0);
 }
 
 #fileInput {
@@ -159,7 +162,7 @@ body {
   padding-left: 12px; /* Reduced padding */
   font-size: 11px; /* Reduced size */
   line-height: 1.4;
-  text-align: justify;
+  padding-right: 20px;
 }
 
 .qr-box {
@@ -263,7 +266,7 @@ p strong {
 #camera-img{
   object-fit: cover;
   height: 100%;
-  width: 157%;
+  width: 200%;
 }
 #qnd-img{
   height: 100px;
@@ -283,28 +286,43 @@ p strong {
 .climate-div{
   border: 2px solid black;
   padding: 15px 10px;
+  border-radius: 40px;
+}
+#zubara-img{
+  height: 100px;
+  width: 180px;
 }
 
 /* Print Styles */
 @media print {
-  body {
-    background: none;
+   body {
+    background: none !important;
     padding: 0;
     margin: 0;
-    /* Ensure no scaling or forced margins from browser */
+
+    /* Force darker text in print */
+    font-family: "Arial Black", "Roboto Condensed", Arial, sans-serif !important;
+    font-weight: 900 !important;
+
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
   }
   #newspaper {
     width: 100%;
-    min-height: 100vh;
+    width: 750px;
     box-shadow: none;
     border: none;
     background-image: none;
     background-color: white;
-    padding: 0.5cm; /* Small margin to respect print boundaries */
+    
   }
   #printBtn {
     display: none;
   }
+  @page {
+  size: A4;      /* or letter */
+  margin: 10mm;  /* small margin */
+}
 
 }
 
