--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   /* A4 Optimization: Set width to fit standard A4 print area (approx. 794px @ 96dpi) */
   width: 794px;
   min-height: 1122px; /* A4 height approx. 1122px */
-  padding: 10px; /* Slightly reduced padding */
+  padding: 0px 10px; /* Slightly reduced padding */
   background-color: #f7f1e5; /* Creamy paper color */
   border: 4px solid #111;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
@@ -159,7 +159,6 @@ body {
 }
 
 .article-right-top {
-  padding-left: 12px; /* Reduced padding */
   font-size: 11px; /* Reduced size */
   line-height: 1.4;
   padding-right: 20px;
@@ -271,6 +270,7 @@ p strong {
 #qnd-img{
   height: 100px;
   width: 180%;
+  padding-right: 10px;
 }
 .first-line{
   margin: 0px;
@@ -285,8 +285,8 @@ p strong {
 }
 .climate-div{
   border: 2px solid black;
-  padding: 15px 10px;
-  border-radius: 40px;
+  padding: 5px 10px;
+  border-radius: 30px;
 }
 #zubara-img{
   height: 100px;
@@ -303,7 +303,7 @@ p strong {
   /* Page setup */
   @page {
     size: A4;
-    margin: 5mm;
+    margin: 3mm;
   }
 
   /* Reset body */
