--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body {
 .columns {
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
-  gap: 12px; 
+  gap: 12px; /* Reduced gap */
 }
 
 .column {
@@ -206,8 +206,9 @@ body {
   font-size: 22px; /* Reduced size */
   text-transform: uppercase;
   font-weight: 700;
-  margin: 8px 0 4px 0;
+  margin: 0px 0 4px 0;
   padding-bottom: 1px;
+  text-align: center;
 }
 
 .climate-title {
@@ -283,7 +284,7 @@ p strong {
 }
 .climate-div{
   border: 2px solid black;
-  padding: 5px 10px;
+  padding: 0px 10px;
   border-radius: 30px;
 }
 #zubara-img{
