--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ p strong {
     padding: 0 !important;
     background: none !important;
 
-    font-family: "Arial Black", "Roboto Condensed", Arial, sans-serif !important;
+     font-family: "Times New Roman", Times, serif;
     font-weight: 900 !important;
 
     -webkit-print-color-adjust: exact !important;
