--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ body {
   font-size: 11px; /* Reduced size */
   line-height: 1.4;
   padding-right: 20px;
+  text-align: justify;
 }
 
 .qr-box {
