--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body {
 /* Image and Top Right Content Grid */
 .content-grid {
   display: grid;
-  grid-template-columns:78% 22%;
+  grid-template-columns: 3fr 1fr; /* Image takes 2/3, text takes 1/3 */
   margin-bottom: 15px;
   height: auto;
 }
@@ -150,7 +150,7 @@ body {
   aspect-ratio: 16 / 10;
   overflow: hidden;
   border: 1px solid #1a1a1a;
-  height: 360px;
+  height: 390px;
   cursor: pointer;
 }
 
@@ -172,7 +172,7 @@ body {
 .article-right-top {
   font-size: 11px; /* Reduced size */
   line-height: 1.4;
-  text-align: justify;
+  padding-right: 20px;
 }
 
 .qr-box {
@@ -199,7 +199,7 @@ body {
 /* Main Columns */
 .columns {
   display: grid;
-  grid-template-columns: 23% 23% 51%;
+  grid-template-columns: 1fr 1fr 2fr;
   gap: 12px; /* Reduced gap */
 }
 
@@ -366,7 +366,7 @@ p strong {
   #printBtn {
     display: none !important;
   }
-  #logoutBtn {
+   #logoutBtn {
     display: none !important;
   }
 
