--- a/style.css
+++ b/style.css
@@ -308,11 +308,15 @@ p strong {
 }
 .first-line{
   margin: 0px;
+  border: 0;
+  border-top: 1px solid #1a1a1a;
+  height: 0;
 }
 .second-line{
+  border: 0;
   background-color: black;
   height: 4px;
-  margin-top: 1px;
+  margin-top: 2px;
 }
 #insta-qr{
   height: 150px;
